# LongVT

./: .gitignore  .pre-commit-config.yaml  README.md  requirements_reproduce.txt
custom_rewards/: tool_reward.py  tool_reward_test.py  vl_agent.py  vl_agent_test.py
custom_tools/: video_tools.py  visual_toolbox.py
data/: constant.py  pyproject.toml  utils.py
data/launch/: caption.py  merge_caption.py  merge_event.py  scene_detect.py  text_summary.py
data/launch_med/surgvidlm/: convert_to_cot_input.py  generate_teacher_sft.py
data/scripts/: run_caption.sh  run_detect.sh  run_text_summary.sh
data/server/: mapping.py  openai.py
data/tools/: split_json_by_team.py
docs/: grounding_aware_grpo.tex
examples/eval/: run_eval.sh  run_single_inference.sh  single_inference.py
examples/rft/: longvt_7b_rft.yaml  run_longvt_7b_rft.sh
examples/sft/: longvt_7b_sft.yaml  run_longvt_7b_sft.sh
examples/video_tools/: LongVT-7B-RL.sh  convert_rl_dataset.py  launch.sh  longvt_7b_videosiah_training.sh  mcp_client.py  mcp_server.py  process_time_r1.py  qwen2_5_vl_chat_template_w_tool.jinja  run_qwen2.5_3b_timer1_w_tool.sh  test_get_frame.py
examples/visual_tool/: process_dataset.py
examples/visualtool/: process_dataset.py  run_qwen0.5b_gsm8k_tool.sh  run_qwen2.5-3b_toolbox_multiturn.sh  run_qwen2.5-7b_toolbox_multiturn.sh  run_qwen2_5_vl-7b_geo3k_tool.sh  (+2 more)
scripts/: clean_teacher_input.py  convert_jsonl_to_teacher_input.py  generate_teacher_sft.py  install_vllm_sglang_mcore.sh  run_generate_teacher_sft.sh  test_reward_three_sources.py
tests/: test_frame_reward.py
(+19 files in other folders)
