[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "longvt-data-pipeline"
version = "0.1.0"
description = "Data processing pipeline for LongVT"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "decord",
    "Pillow",
    "qwen-vl-utils",
    "scenedetect[opencv]",
    "openai>=1.0.0",
    "torch",
    "torchvision",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.ruff]
line-length = 119

